String bei Geschlecht geändert

--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -42,8 +42,8 @@
 										<td><h:selectOneRadio id="geschlecht" required="false"
 												value="#{loginBean.studentBean.geschlecht}"
 												layout="lineDirection">
-												<f:selectItem itemLabel="weiblich" itemValue="w" />
-												<f:selectItem itemLabel="männlich" itemValue="m" />
+												<f:selectItem itemLabel="weiblich" itemValue="weiblich" />
+												<f:selectItem itemLabel="männlich" itemValue="männlich" />
 											</h:selectOneRadio></td>
 										<td><h:message for="geschlecht"
 												class="alert alert-danger alert-box" /></td>
