--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -3,6 +3,7 @@
 <ui:composition template="/WEB-INF/templates/BasicTemplate.html"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<ui:define name="title">Index</ui:define>
@@ -41,10 +42,13 @@
 								rendered="#{loginBean.studentBean.angemeldet}" />
 							<br /> <br />
 							<h:dataTable rendered="#{loginBean.studentBean.angemeldet}"
-								value="#{loginBean.liste}" var="student">
+								value="#{loginBean.liste}" var="student"
+								styleClass="table table-striped">
 
-								<h:column>#{student.username}</h:column>
-								<h:column> #{student.password} </h:column>
+								<h:column>
+									<f:facet name="header">Username</f:facet>#{student.username}</h:column>
+								<h:column>
+									<f:facet name="header">Password</f:facet>#{student.password} </h:column>
 							</h:dataTable>
 						</div>
 					</div>
