--- a/WebContent/profile.xhtml
+++ b/WebContent/profile.xhtml
@@ -55,8 +55,8 @@
 						<div class="box-body">
 							<strong><i class="fa fa-book margin-r-5"></i> Education</strong>
 
-							<p class="text-muted">B.S. in Industrial Engineering and Management from the
-								Karlsruhe Institute of Technology</p>
+							<p class="text-muted">B.S. in Industrial Engineering and
+								Management from the Karlsruhe Institute of Technology</p>
 
 							<hr />
 							<strong><i class="fa fa-map-marker margin-r-5"></i>
@@ -94,9 +94,9 @@
 									<div class="user-block">
 										<h:graphicImage library="images" name="user1-128x128.jpg"
 											alt="user image" class="img-circle img-bordered-sm" />
-										<span class="username"> <a href="#">Jonathan Burke
-												Jr.</a> <a href="#" class="pull-right btn-box-tool"><i
-												class="fa fa-times"></i></a>
+										<span class="username"> <a href="#"><h:outputText
+													value="#{loginBean.randomUser()}" /></a> <a href="#"
+											class="pull-right btn-box-tool"><i class="fa fa-times"></i></a>
 										</span> <span class="description">Shared publicly - 7:30 PM
 											today</span>
 									</div>
@@ -126,9 +126,9 @@
 									<div class="user-block">
 										<h:graphicImage library="images" name="user7-128x128.jpg"
 											alt="user image" class="img-circle img-bordered-sm" />
-										<span class="username"> <a href="#">Sarah Ross</a> <a
-											href="#" class="pull-right btn-box-tool"><i
-												class="fa fa-times"></i></a>
+										<span class="username"> <a href="#"><h:outputText
+													value="#{loginBean.randomUser()}" /></a><a href="#"
+											class="pull-right btn-box-tool"><i class="fa fa-times"></i></a>
 										</span> <span class="description">Sent you a message - 3 days
 											ago</span>
 									</div>
@@ -158,7 +158,8 @@
 									<div class="user-block">
 										<h:graphicImage library="images" name="user6-128x128.jpg"
 											alt="user image" class="img-circle img-bordered-sm" />
-										<span class="username"> <a href="#">Adam Jones</a> <a
+										<span class="username"> <a href="#"><h:outputText
+													value="#{loginBean.randomUser()}" /></a> <a
 											href="#" class="pull-right btn-box-tool"><i
 												class="fa fa-times"></i></a>
 										</span> <span class="description">Posted 5 photos - 5 days ago</span>
