--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 
-<ui:composition template="/WEB-INF/templates/BasicTemplate.html"
+<ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
