--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -1,81 +1,67 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 
-<ui:composition template="/WEB-INF/templates/BasicTemplate.html"
+<ui:composition template="/WEB-INF/templates/PlainTemplate.xhtml"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
+
 	<ui:define name="title">Login</ui:define>
 
 	<ui:define name="content">
-		<div class="content-header">
-			<h1>Account Login</h1>
-		</div>
-		<!-- Main content -->
-		<div class="content">
-			<div class="row">
-				<div class="col-xs-12 col-md-6 col-lg-4">
-					<div class="box">
-						<div class="box-header with-border"></div>
-						<div class="box-body">
-							<table class="table">
-								<h:form>
-									<tr>
-										<td><h:outputLabel for="username" value="Username" /></td>
-										<td><h:inputText id="username"
-												value="#{loginBean.studentBean.username}"
-												valueChangeListener="#{loginBean.changedUser}" /></td>
-										<td>
-											<!-- hier wird die Fehlermedlung zurückgegeben --> <h:message
-												for="username" class="alert alert-danger alert-box" />
-										</td>
-									</tr>
-									<tr>
-										<td><h:outputLabel for="age" value="Alter" /></td>
-										<td><h:inputText id="age"
-												value="#{loginBean.studentBean.age}" /></td>
-										<td><h:message for="age"
-												class="alert alert-danger alert-box" /></td>
-									</tr>
-									<tr>
-										<td>Geschlecht</td>
-										<td><h:selectOneRadio id="geschlecht" required="false"
-												value="#{loginBean.studentBean.geschlecht}"
-												layout="lineDirection">
-												<f:selectItem itemLabel="weiblich" itemValue="weiblich" />
-												<f:selectItem itemLabel="männlich" itemValue="männlich" />
-											</h:selectOneRadio></td>
-										<td><h:message for="geschlecht"
-												class="alert alert-danger alert-box" /></td>
-									</tr>
-									<tr>
-										<td><h:outputLabel for="password" value="Password" /></td>
-										<td><h:inputSecret id="password"
-												value="#{loginBean.studentBean.password}" /></td>
-										<td><h:message for="password"
-												class="alert alert-danger alert-box" /></td>
-									</tr>
-									<tr>
-										<td>AGB akzeptieren</td>
-										<td><h:selectBooleanCheckbox id="agb"
-												value="#{loginBean.studentBean.agb}" /></td>
-										<td><h:message for="agb"
-												class="alert alert-danger alert-box" /></td>
-									</tr>
-									<tr>
-										<td colspan="2"><h:commandButton id="button"
-												value="Login" binding="#{loginBean.button}"
-												action="#{loginBean.login}" class="btn btn-default btn-flat"/></td>
-										<td><h:message for="button"
-												class="alert alert-danger alert-box" /></td>
-									</tr>
-								</h:form>
-							</table>
-						</div>
-					</div>
-				</div>
+
+		<div class="login-box">
+			<div class="login-logo">
+				<a href="../../index2.html"><b>Admin</b>LTE</a>
 			</div>
+			<!-- /.login-logo -->
+			<div class="login-box-body">
+				<p class="login-box-msg">Sign in to start your session</p>
+
+
+				<form action="../../index2.html" method="post">
+					<div class="form-group has-feedback">
+						<h:inputText id="username"
+							value="#{loginBean.studentBean.username}"
+							valueChangeListener="#{loginBean.changedUser}"
+							class="form-control">
+							<!-- Pass-Through-Attribute ersetzen HTML5 Tags -->
+							<!-- <input type="email" class="form-control" placeholder="Email"> -->
+							<f:passThroughAttribute name="type" value="email" />
+							<f:passThroughAttribute name="placeholder" value="Email" />
+						</h:inputText>
+						<!-- hier wird die Fehlermedlung zurückgegeben -->
+						<h:message for="username" class="alert alert-danger alert-box" />
+						<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+					</div>
+					<div class="form-group has-feedback">
+					<!-- TODO hier weiter machen -->
+						<input type="password" class="form-control" placeholder="Password" /><span
+							class="glyphicon glyphicon-lock form-control-feedback"></span>
+					</div>
+					<div class="row">
+						<div class="col-xs-8">
+							<div class="checkbox icheck">
+								<label> <input type="checkbox" /> Remember Me
+								</label>
+							</div>
+						</div>
+						<!-- /.col -->
+						<div class="col-xs-4">
+							<button type="submit" class="btn btn-primary btn-block btn-flat">Sign
+								In</button>
+						</div>
+						<!-- /.col -->
+					</div>
+
+
+				</form>
+
+				<a href="register" class="text-center">Register a new membership</a>
+
+			</div>
+			<!-- /.login-box-body -->
 		</div>
-		<!-- /.content -->
+		<!-- /.login-box -->
 	</ui:define>
 </ui:composition>
