--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -12,7 +12,11 @@
 
 		<div class="login-box">
 			<div class="login-logo">
-				<a href="../../index2.html"><b>Admin</b>LTE</a>
+				<h:form>
+					<h:commandLink action="index">
+						<b>Admin</b>LTE
+					</h:commandLink>
+				</h:form>
 			</div>
 			<!-- /.login-logo -->
 			<div class="login-box-body">
