--- a/WebContent/register.xhtml
+++ b/WebContent/register.xhtml
@@ -51,7 +51,8 @@
 					</div>
 					<div class="form-group has-feedback">
 						<h:inputSecret id="password"
-							value="#{loginBean.studentBean.password}" class="form-control">
+							value="#{loginBean.studentBean.password}" class="form-control"
+							binding="#{passwordComponent}">
 							<f:passThroughAttribute name="placeholder" value="Password" />
 						</h:inputSecret>
 						<h:message for="password" class="alert alert-danger alert-box" />
@@ -59,7 +60,11 @@
 					</div>
 					<div class="form-group has-feedback">
 						<h:inputSecret id="password2"
-							value="#{loginBean.studentBean.password}" class="form-control">
+							value="#{loginBean.studentBean.password}" class="form-control"
+							validatorMessage="Passwords are not equal">
+							<!-- Passwoerter vergleichen -->
+							<f:validator validatorId="equalsValidator" />
+							<f:attribute name="pw2" value="#{passwordComponent.value}" />
 							<f:passThroughAttribute name="placeholder"
 								value="Retype password" />
 						</h:inputSecret>
