section berechneter content deleted

--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -14,7 +14,7 @@
 			<div class="login-logo">
 				<h:form>
 					<h:commandLink action="index">
-						<b>Admin</b>LTE
+						<b>Face</b>Worlds
 					</h:commandLink>
 				</h:form>
 			</div>
