--- a/WebContent/register.xhtml
+++ b/WebContent/register.xhtml
@@ -13,7 +13,7 @@
 			<div class="register-logo">
 				<h:form>
 					<h:commandLink action="index">
-						<b>Admin</b>LTE
+						<b>Face</b>Worlds
 					</h:commandLink>
 				</h:form>
 			</div>
